--- a/MapQuery/MapQuery.csproj
+++ b/MapQuery/MapQuery.csproj
@@ -57,7 +57,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -80,14 +80,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{7c326675-1d54-4330-8e92-50ef1cd63cf4}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Model\Model.csproj">
-      <Project>{19b63ec8-90ce-432a-a432-0ee881067f0c}</Project>
-      <Name>Model</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Service\Service.csproj">
       <Project>{14bf475e-1f4f-44b5-9f5d-ae181c31676b}</Project>
       <Name>Service</Name>
