--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -46,11 +49,18 @@
     <Compile Include="common\CoordTypeEnum.cs" />
     <Compile Include="common\GlobalConstant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="proxy\baidu\BaiduProxy.cs" />
     <Compile Include="proxy\baidu\dto\PlaceSearchRequestDTO.cs" />
     <Compile Include="proxy\baidu\dto\PlaceSearchResponseDTO.cs" />
+    <Compile Include="proxy\BaseProxy.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="common\utils\" />
     <Folder Include="service\" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +68,15 @@
       <Project>{7c326675-1d54-4330-8e92-50ef1cd63cf4}</Project>
       <Name>Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
