--- a/ServiceTests/ServiceTests.csproj
+++ b/ServiceTests/ServiceTests.csproj
@@ -59,7 +59,7 @@
     <Compile Include="common\AKSNCaculaterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="proxy\baidu\BaiduProxyTests.cs" />
-    <Compile Include="proxy\BaseProxyyTests.cs" />
+    <Compile Include="proxy\BaseProxyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
