--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -47,11 +47,14 @@
     <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="http\response\BaseDTO.cs" />
     <Compile Include="http\response\BaseResponseDTO.cs" />
     <Compile Include="http\request\BaseRequestDTO.cs" />
     <Compile Include="http\response\SingleResponseDTO.cs" />
     <Compile Include="http\response\StatusCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="serviceManager\ServiceManager.cs" />
+    <Compile Include="utils\CmdUtils.cs" />
     <Compile Include="utils\EncodingUtil.cs" />
     <Compile Include="utils\EnumUtil.cs" />
     <Compile Include="utils\HttpRequestUtil.cs" />
